Sun Jun  1 02:01:38 UTC 2008  Ken Sedgwick  <ken+5a4@bonsai.com>

	* rpmbuild/ace-tao.spec:
	* rpmbuild/ace-tao-etc.tar.gz:
	* rpmbuild/ace-tao-orbsvcs-daemon.patch:
          Added ace-tao-orbsvcs-daemon.patch to workaround
          daemonization problems in rpm installed services.
          Fixed tao-cosconcurrency command line arguments.

Fri May 30 13:57:06 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.4.h:
        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.3.h:
          VxWorks doesn't provide strtoull().

Fri May 30 13:48:48 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * ace/config-openvms.h:
          OpenVMS doesn't provide wcstoull() function.

Fri May 30 13:37:13 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * ace/OS_NS_stdlib.inl:
          Fixed MinGW builds.

        * ace/config-cygwin32.h:
          Disabled wcstoull() on cygwin since it doesn't provide
          such function.

Fri May 30 13:17:55 UTC 2008  Simon Massey  <sma@prismtech.com>

        * test/INET_Addr_Test_IPV6.cpp:
          Resolve Conflict #define INTERFACE with MFC under VC8.

Fri May 30 10:07:55 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * ace/config-win32-borland.h:
          Borland compilers doesn't provide strtoull() and wcstoull().

        * ace/config-sunos5.5.h:
        * ace/config-sunos5.10.h:
          wcstoull() didn't exist on Solaris until version 10.

        * ace/config-hpux-11.00.h:
          HP-UX doesn't provide strtoull() and wcstoull().

Thu May 29 16:08:01 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_stdlib.h:

          Added strtoull() function to ACE_OS.

        * configure.ac:

          Added a check for presence of strtoull() and wcstoull()
          in the build environment.
