@@ -2242,8 +2242,10 @@ Michael Carter <mcarter at swri dot org>
 Alain Kocelniak <alain at corys dot fr>
 Alvaro Vega Garcia <avega at tid dot es>
 Fernando C. Jeronymo <fernando dot fcavalcanti at gmail.com>
+Stephen Mouring <stephen dot mouring at lmco dot com>
 Tim <tim at burmair dot com>
 Thomas Brownridge <thomas dot brownridge at lmco dot com>
+June Fang <june dot fang at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
