@@ -12,10 +12,10 @@ stream dynamic CCM_App STREAM *CCM_App:make_stream() active
 stream CCM_App
 {
   remove Device_Adapter
-#  remove Event_Analyzer
-#  remove Multicast_Router
+  remove Event_Analyzer
+  remove Multicast_Router
 }
  
-# remove CCM_App
+remove CCM_App
 remove Test_Task
 
